# Xbot

./: .env.example  .gitignore  README.md  demo.md  pitch.md
agent/: agent.py  requirements.txt
ami-browser/: README.md  cli.js  index.js  package-lock.json  package.json
ami-browser/src/: action-schema.js  action-store.js  action-tools.js  action-translator.js  ami-backend.js
ami-browser/tests/: library.spec.ts
echo/: pyproject.toml
echo/cli/: app.py  commands.py  rendering.py
echo/compose/: generator.py
echo/db/: __init__.py  database.py  models.py
echo/evolve/: digest.py  voice_evolver.py
echo/scorer/: __init__.py
echo/scout/: poller.py
echo/voice/: analyser.py
execution/: .env  README.md  TkVisualizer.py  audio_ami.py  audio_jarvis.py  db.py  migration.md  overlay.js  pyproject.toml
execution/supabase/: config.toml
execution/supabase/.temp/: pooler-url  project-ref
execution/supabase/migrations/: 20260228174239_init_schema.sql  20260228192000_add_embedding_visit_count.sql
parrot-browser/: README.md  cli.js  index.js  package-lock.json  package.json
parrot-browser/src/: action-store.js  action-tools.js  action-translator.js  parrot-backend.js
parrot-browser/supabase/migrations/: 0001_initial_schema.sql
parrot-browser/tests/: library.spec.ts
supabase/migrations/: 0002_echo_analytics.sql  0002_echo_authors.sql  0002_echo_schema.sql  0002_echo_voice_profiles.sql  0003_echo_views.sql  0005_xbot_schema.sql  0007_echo_evolve_tables.sql
