[project]
name = "ami"
version = "0.1.0"
description = "Voice-controlled AI agent that browses the web for you"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.37.0",
    "customtkinter>=5.2.2",
    "mcp>=1.26.0",
    "mistralai[realtime]>=1.12.4",
    "numpy>=1.24.0",
    "openai>=2.24.0",
    "playwright>=1.58.0",
    "sounddevice>=0.5.0",
    "websockets>=12.0",
]
